Cleaner filter display

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="col-lg-12">
     <div class="gridster">
         <ul id="dashboard"></ul>
-        <div id="filters2"></div>
+        <div id="info"></div>
     </div> 
   </div>
 </div>
